main.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #ddddddcd;
    line-height: 1.5;
}

a,
a:visited {
    color: blue;
}

main {
    padding: 20px;
    max-width: 1140px;
    margin: auto;

    .cols {
        display: grid;
        grid-template-columns: 1fr 1fr;

        @media(max-width:960px) {
            grid-template-columns: 1fr;
        }
    }

    .box {
        background-color: #ffffffb0;
        padding: 2rem;
        border-radius: 0.25rem;
        margin-bottom: 1rem;

        @media(max-width:960px) {
            padding: 1.5rem;
        }

        ul {
            margin: 0;
            padding: 0;
            list-style-position: inside;
            line-height: 1.75;
        }

        h2 {
            margin: 0;
            margin-bottom: 1rem;
        }
    }

}

.title {
    text-align: center;
    margin-bottom: 60px;

    h1 {
        font-size: 60px;
        text-align: center;
        line-height: 1;
        margin-bottom: 0;
    }

    p {
        font-size: 21px;

        @media(max-width:960px) {
            font-size: 18px;
        }
    }
}



.whatsapp-button {
    display: flex;
    align-items: center;
    gap: 1rem;

    svg {
        width: 42px;
        height: 42px;
        line-height: 1;
    }

}

.pswp-gallery {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-auto-flow: row;

    a {
        max-width: 100%;
        display: flex;

        img {
            display: flex;
            width: 100%;
        }
    }
}

